--- a/src/lib/server/scripts/template.html
+++ b/src/lib/server/scripts/template.html
@@ -4,12 +4,12 @@
   <style>
     body {
       font-family: 'Arial', sans-serif;
-      background: #f0f0f0;
+      background: #111111;
       margin: 0;
       padding: 40px 20px;
     }
     .ticket {
-      background: white;
+      background: #111111;
       max-width: 600px;
       margin: 0 auto;
       border-radius: 15px;
@@ -17,27 +17,26 @@
       overflow: hidden;
     }
     .ticket-header {
-      background: #1a237e;
+      background: #ae201f;
       color: white;
       padding: 20px;
       text-align: center;
     }
     .ticket-body {
       padding: 30px;
+      color: #FFFFFF;
     }
     .qr-section {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
       margin: 20px 0;
       padding: 20px;
-      background: #f8f9fa;
+      background: #1e1e1e;
       border-radius: 10px;
     }
     .qr-code {
-      width: 200px;
-      height: 200px;
+      width: 100%;
       background: #e0e0e0;
+      margin-left: auto;
+      margin-right: auto;
     }
     .details {
       flex: 1;
@@ -48,23 +47,20 @@
       border-left: 4px solid #ffc107;
       padding: 15px;
       margin: 20px 0;
+      color: #111111;
     }
     .ticket-footer {
-      background: #f8f9fa;
+      background: #1e1e1e;
+      color: #FFFFFF;
       padding: 15px;
       text-align: center;
       font-size: 0.9em;
       border-top: 1px dashed #dee2e6;
     }
-    .event-details {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      gap: 15px;
-      margin: 20px 0;
-    }
+
     .detail-item {
       padding: 10px;
-      background: #f8f9fa;
+      background: #1e1e1e;
       border-radius: 5px;
     }
   </style>
@@ -72,7 +68,7 @@
 <body>
   <div class="ticket">
     <div class="ticket-header">
-      <h1 style="margin: 0;">Cogestione 2024</h1>
+      <h1 style="margin: 0;">Cogestione Invernale 2024</h1>
       <p style="margin: 10px 0 0 0;">ITIS P. Paleocapa</p>
     </div>
     
